- bugfix in setting the padding in ShowScrollbarsBehaviour (forgot to invalidate the Padding) - LayoutClient will now update it's widths and heights when the padding or margin is invalidated - bugfixes in ComboBox - DataButton.vo is now a Bindable - add defaultLabel property to DataButton - DataButton will now automaticly update it's label value when the vo is changed - bugfix in ListView - methods LayoutClient.updateAllWidths/updateAllHeights are now public

--- a/styles/empty/BasicStyle.css
+++ b/styles/empty/BasicStyle.css
@@ -78,7 +78,7 @@ VideoControlBar Button		{ background: #f00; width: 50px; height: 50px; }*/
  **************/
 
 ComboBox {
-	skin: Class( primevc.gui.components.skins.ComboBoxBtnSkin );
+/*	skin: Class( primevc.gui.components.skins.ComboBoxBtnSkin );*/
 	min-width: 40px;
 }
 
